# Invoicr

./: Cargo.toml
src/: appdata.rs  authenticator.rs  main.rs
src/apis/: espocrm.rs  mod.rs  pdf.rs
src/endpoints/: mod.rs
src/endpoints/history/: invoice.rs  quote.rs
src/endpoints/ids/: quote.rs
src/endpoints/pdf/: invoice.rs  mod.rs  quote.rs
src/endpoints/persons/: get.rs
src/endpoints/products/: add.rs  del.rs  get.rs  mod.rs
src/pdf/: image.rs
src/threads/: espocrm.rs  mod.rs
