[package]
name = "invoicr"
version = "0.1.0"
authors = ["Tobias de Bruijn <github@thedutchmc.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_yaml = "0.8.17"
actix-web = "3.3.2"
actix-cors = "0.5.4"
mysql = "20.1.0"
espocrm-rs = "0.2.1"
rand = "0.8.3"
reqwest = { version = "0.11.3", features = ["json"]}
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread"]}
printpdf = "=0.3.3"
genpdf = "0.1.1"
chrono = "0.4.19"
