[package]
name = "invoicr"
version = "0.1.0"
authors = ["Tobias de Bruijn <github@thedutchmc.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_yaml = "0.8.17"
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-web-grants = "2.0.1"
mysql = "20.1.0"
espocrm-rs = "0.3.0"
rand = "0.8.3"
reqwest = { version = "0.11.3", features = ["json"]}
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread"]}
chrono = "0.4.19"
sha2 = "0.9.4"
hmac = "0.11.0"
lazy_static = "1.4.0"
async-recursion = "0.3.2"
base64 = "0.13.0"